--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           </p>
 
           <p>
-            Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.
+            Looking for an opportunity to work in a challenging position combining my skills in Web Development, which provides professional development, interesting experiences and personal growth.
           </p>
         </div>
     </section>
