--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
     </section>
 
     <!-- Fourth Section: Projects -->
-    <!--<section id="projects" class="section scrollspy">
+    <section id="projects" class="section scrollspy">
         <h3 class="page-title white-text teal">Projects</h3>
         <div class="container">
           <div class="row">
@@ -364,16 +364,16 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             <div class="col s12 m6 l4">
               <div class="card medium">
                 <div class="card-image waves-effect waves-block waves-light">
-                  <img alt="quiz app" src="/assets/img/project-quizup-logo-1.png" style="height: 100%; width: 100%" class="activator" />
+                  <img alt="quiz app" src="img/tertis.jpg" style="height: 100%; width: 100%" class="activator" />
                 </div>
                 <div class="card-content">
-                  <span class="card-title activator teal-text hoverline">Quiz Web-App<i
+                  <span class="card-title activator teal-text hoverline">Tertis Web-App<i
                       class="mdi-navigation-more-vert right"></i></span>
                   <p>
-                    A quiz playing web app based on Django
+                    Tertis a block game web app based on JavaScript
                   </p>
                 </div>
-                <div class="card-reveal">-->
+                <div class="card-reveal">
                  <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
                 <!--<span class="card-title grey-text"><small>Accomplishments</small><i
