--- a/index.html
+++ b/index.html
@@ -375,28 +375,28 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 </div>
                 <div class="card-reveal">
                  <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <!--<span class="card-title grey-text"><small>Accomplishments</small><i
+                <!--<span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>-->
+                <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> Django, HTML, CSS, Bootstrap, SQLite, Heroku</li>
-                  <li>Register/login to the web app(with OAuth-based Google Sign-In).</li>
-                  <li>Play Quiz and see the leaderboard</li>
+                  <li><b>Tools:</b> HTML, CSS, Bootstrap, JavaScript</li>
+                  <li>Move the block with up, down, left and right keys.</li>
+                  <li>Play tertis and see the leaderboard</li>
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit " href="https://quiz-up-app.herokuapp.com/" target="_blank" data-position="top"
+                  <a aria-label="Visit " href="# target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/QuizUp"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/rujal404/tertis-js"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
-          </div>-->
+          </div>
 
           <!-- 1. Django Project -->
           <!--<div class="col s12 m6 l6">
@@ -475,9 +475,9 @@ such as login/sign up, view a product, add a product to cart, checkout the order
    
 
           <!-- ************* -->
-       <!-- </div>
+       </div>
       </div>
-    </section>-->
+    </section>
 
      <!-- Fifth Section: Skills -->
      <section id="skills" class="section scrollspy">
