--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <meta property="og:url" content="https://rujaltamrakar.com.np/" />
   <meta property="og:site_name" content="Rujal Tamrakar | Front-end Developer" />
   <meta property="article:publisher" content="https://rujaltamrakar.com.np/" />
-  <meta property="og:image" content="https://rujal404.github.io/img/preview.png" />
+  <meta property="og:image" content="https://github.com/rujal404/portfolio-website/blob/master/img/preview.png" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="#" />
