--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <meta property="og:url" content="https://rujaltamrakar.com.np/" />
   <meta property="og:site_name" content="Rujal Tamrakar | Front-end Developer" />
   <meta property="article:publisher" content="https://rujaltamrakar.com.np/" />
-  <meta property="og:image" content="https://rujal404.github.io/img/preview.png" />
+  <meta property="og:image" content="https://github.com/rujal404/portfolio-website/blob/master/img/preview.png"/>
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="#" />
@@ -150,7 +150,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Varad's resume in a new tab" href=https://drive.google.com/file/d/1y7xprOYI04XyScoG8Q1Ev6yGnVWkzwIX/view?usp=sharing target="_blank"
+        <a aria-label="Open Varad's resume in a new tab" href="https://drive.google.com/file/d/1rltCw5lGNS6aO2NLlRyKI3Gk8QY1M0_v/view?usp=sharing" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -196,7 +196,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Varad's Resume in a new tab"
-          href="https://drive.google.com/file/d/1y7xprOYI04XyScoG8Q1Ev6yGnVWkzwIX/view?usp=sharing" target="_blank"
+          href="https://drive.google.com/file/d/1rltCw5lGNS6aO2NLlRyKI3Gk8QY1M0_v/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
