--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
   <meta property="og:url" content="https://rujaltamrakar.com.np/" />
   <meta property="og:site_name" content="Rujal Tamrakar | Front-end Developer" />
   <meta property="article:publisher" content="https://rujaltamrakar.com.np/" />
-<<<<<<< HEAD
   <meta property="og:image" content="https://github.com/rujal404/portfolio-website/blob/master/img/preview.png"/>
-=======
-  <meta property="og:image" content="https://github.com/rujal404/portfolio-website/blob/master/img/preview.png" />
->>>>>>> 3371ec826a9f2e7b65a8f2c1f074b0e6a222a03b
+  <!--<meta property="og:image" content="https://github.com/rujal404/portfolio-website/blob/master/img/preview.png" />-->
+
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="#" />
@@ -54,7 +52,7 @@
   <meta name="twitter:url" content="https://twitter.com/#" />
   <meta name="author" content="Varad Bhogayata" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
-  <!--<link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png" />
   <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon/apple-icon-76x76.png" />
@@ -69,7 +67,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png" />
   <link rel="manifest" href="/assets/img/favicon/manifest.json" />
   <meta name="msapplication-TileColor" content="#ffffff" />
-  <meta name="msapplication-TileImage" content="/assets/img/favicon/ms-icon-144x144.png" />-->
+  <meta name="msapplication-TileImage" content="/assets/img/favicon/ms-icon-144x144.png" />
   <meta name="theme-color" content="#ffffff" />
   <meta name="robots" content="index, follow" />
   <!-- Google Site Verification for indexing -->
@@ -378,11 +376,11 @@ such as login/sign up, view a product, add a product to cart, checkout the order
           <div class="role brown-text text-darken-2">Music Producer</div>
           <ul>
             <li>
-              Mix and Master a song or any audio tracks with Reaper using various equilizers and other filter plugins aimed to achieve clean mix.
+              Mix and Master a song or any audio tracks with Reaper using various equilizers and other filter plugins aimed to achieve clean and balanced mix.
               
             </li>
             <li>
-              Write and produce music and release it to streaming platforms.
+              Write and produce music and release it to various streaming platforms.
             </li>
             <li>
               <b>Tools:</b> Reaper, Vst plugins
@@ -402,10 +400,11 @@ such as login/sign up, view a product, add a product to cart, checkout the order
         <div class="container">
           <div class="row">
   
+            <!--1. JavaScript Project-->
             <div class="col s12 m6 l4">
               <div class="card medium">
                 <div class="card-image waves-effect waves-block waves-light">
-                  <img alt="quiz app" src="img/tertis.jpg" style="height: 100%; width: 100%" class="activator" />
+                  <img alt="tertis web app" src="img/tertis.jpg" style="height: 100%; width: 100%" class="activator" />
                 </div>
                 <div class="card-content">
                   <span class="card-title activator teal-text hoverline">Tertis Web-App<i
@@ -416,17 +415,17 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 </div>
                 <div class="card-reveal">
                  <!-- TODO: change this -- only close button -->
-                <!--<span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>-->
-                <span class="card-title grey-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
+                <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
+                <!--<span class="card-title grey-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>-->
                 <ul>
-                  <li><b>Tools:</b> HTML, CSS, Bootstrap, JavaScript</li>
+                  <li><b>Tools:</b> HTML, CSS, JavaScript</li>
                   <li>Move the block with up, down, left and right keys.</li>
                   <li>Play tertis and see the leaderboard</li>
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit " href="# target="_blank" data-position="top"
+                  <a aria-label="Visit" href="#" target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
@@ -439,24 +438,24 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             </div>
           </div>
 
-          <!-- 1. Django Project -->
-          <!--<div class="col s12 m6 l6">
+          <!-- 2. JavaScript Project -->
+          <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="django web app" src="/assets/img/project-library-logo.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="JavaScript web app" src="img/sample.jpeg" style="height: 100%; width: 100%;" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Local Library Web-App<i
+                <span class="card-title activator teal-text hoverline">Pacman Web-App<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A web-app that creates an online catalog for a small local library, where users can browse available books and manage their accounts.
+                  Pacman a web-app game base on JavaScript. 
+                  <!--web-app that creates an online catalog for a small local library, where users can browse available books and manage their accounts.-->
                 </p>
               </div>
               <div class="card-reveal">
-                <span class="card-title grey-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
+                <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> HTML, CSS, Bootstrap, SQLite, Django, Heroku</li>
+                  <li><b>Tools:</b> HTML, CSS, JavaScript</li>
                   <li>Users can view list and detail information for books and authors.</li>
                   <li>Admin users can create and manage models.</li>
                   <li>Librarians can renew reserved books.</li>
@@ -474,29 +473,29 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 </div>
               </div>
             </div>
-          </div>-->
+          </div>
 
           <!-- Flask Project -->
-          <!--<div class="col s12 m6 l4">
+          <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of web app" src="/assets/img/project-blog-logo.jpg"
+                <img alt="Screenshot of web page" src="/assets/img/project-blog-logo.jpg"
                 style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Blog Web-App<i
+                <span class="card-title activator teal-text hoverline">Prestigio Foods<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A simple and extensible blog web-app based on Flask.
+                  A simple and responsive website based on....
                 </p>
               </div>
-              <div class="card-reveal">-->
+              <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+               <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
                 <!--<span class="card-title teal-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
+                    class="mdi-navigation-close right"></i></span>-->
                 <ul>
-                  <li><b>Tools:</b> HTML, CSS, Bootstrap, Flask, SQLAlchemy, Postgresql, Python</li>
+                  <li><b>Tools:</b> HTML, CSS, Bootstrap, JavaScrippt</li>
                   <li>Users can view posts and contact the admin via Contact Page.</li>
                   <li>Admin can Add, Delete, Update posts.</li>
                 </ul>
@@ -512,7 +511,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 </div>
               </div>
             </div>
-          </div>-->
+          </div>
    
 
           <!-- ************* -->
