--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
           </div>   
 
           <!-- 2. JavaScript Project -->
-          <div class="col s12 m6 l6">
+          <!--<div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="JavaScript web app" src="img/sample.jpeg" style="height: 100%; width: 100%;" class="activator" />
@@ -450,9 +450,9 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 <span class="card-title activator teal-text hoverline">Pacman Web-App<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  Pacman a web-app game base on JavaScript. 
+                  Pacman a web-app game base on JavaScript. -->
                   <!--web-app that creates an online catalog for a small local library, where users can browse available books and manage their accounts.-->
-                </p>
+                <!--</p>
               </div>
               <div class="card-reveal">
                 <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
@@ -475,10 +475,10 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
 
           <!-- Flask Project -->
-          <div class="col s12 m6 l4">
+          <!--<div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Screenshot of web page" src="/assets/img/project-blog-logo.jpg"
@@ -491,12 +491,12 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                   A simple and responsive website based on....
                 </p>
               </div>
-              <div class="card-reveal">
+              <div class="card-reveal">-->
                 <!-- TODO: change this -- only close button -->
-               <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
+               <!--<span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>-->
                 <!--<span class="card-title teal-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>-->
-                <ul>
+                <!--<ul>
                   <li><b>Tools:</b> HTML, CSS, Bootstrap, JavaScrippt</li>
                   <li>Users can view posts and contact the admin via Contact Page.</li>
                   <li>Admin can Add, Delete, Update posts.</li>
@@ -513,7 +513,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
           <!-- ************* -->
        </div>
       </div>
