--- a/index.html
+++ b/index.html
@@ -687,6 +687,24 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             </div>
           </section>
         </main>
+        <!-- <footer id="footer">
+          <div class="container">
+            <div class="copyright">
+              © Copyright 
+              <script>
+                document.write(new Date().getFullYear());
+              </script>
+              <strong><span class="copyright-rujal"> Rujal</span></strong>
+              . |All Rights Reserved|
+            </div>
+            <div class="credits">
+            Designed by
+            <span class="designed-rujal"> 
+              <a href="https://www.linkedin.com/in/rujaltamrakar" target="_blank">Rujal Tamrakar</a> 
+            </span>.
+            </div>
+          </div>
+        </footer> -->
       
         <!-- typed.js -->
         <script src="js/typed.min.js"></script>
