--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
   <meta name="google-site-verification" content="_qxK8tePiU2fhnwlwnJ7pkDFnj1k2EiKq_cYGy1Cb84" />
   <!-- Google Site Verification for indexing -->
   <meta name="google-site-verification" content="_qxK8tePiU2fhnwlwnJ7pkDFnj1k2EiKq_cYGy1Cb84" />
+  <meta name="google-adsense-account" content="ca-pub-2226038804886747">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2226038804886747"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
