--- a/index.html
+++ b/index.html
@@ -404,13 +404,13 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             <div class="col s12 m6 l4">
               <div class="card medium">
                 <div class="card-image waves-effect waves-block waves-light">
-                  <img alt="tertis web app" src="img/tertis.jpg" style="height: 100%; width: 100%" class="activator" />
+                  <img alt="tertis web app" src="img/tetris.jpg" style="height: 100%; width: 100%" class="activator" />
                 </div>
                 <div class="card-content">
-                  <span class="card-title activator teal-text hoverline">Tertis Web-App<i
+                  <span class="card-title activator teal-text hoverline">Tetris Web-App<i
                       class="mdi-navigation-more-vert right"></i></span>
                   <p>
-                    Tertis a block game web app based on JavaScript
+                    Tetris a block game web app based on JavaScript
                   </p>
                 </div>
                 <div class="card-reveal">
@@ -420,12 +420,12 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                     class="mdi-navigation-close right"></i></span>-->
                 <ul>
                   <li><b>Tools:</b> HTML, CSS, JavaScript</li>
-                  <li>Move the block with up, down, left and right keys.</li>
-                  <li>Play tertis and see the leaderboard</li>
+                  <li>Move the block with up, down, left and right arrow keys.</li>
+                  <li>Play tetris and see the leaderboard</li>
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit" href="#" target="_blank" data-position="top"
+                  <a aria-label="Visit" href="https://tetris.rujaltamrakar.com.np/" target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
@@ -439,18 +439,18 @@ such as login/sign up, view a product, add a product to cart, checkout the order
           </div>   
 
           <!-- 2. JavaScript Project -->
-          <!--<div class="col s12 m6 l6">
+          <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="JavaScript web app" src="img/sample.jpeg" style="height: 100%; width: 100%;" class="activator" />
+                <img alt="JavaScript web app" src="img/pacman.jpg" style="height: 100%; width: 100%;" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Pacman Web-App<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  Pacman a web-app game base on JavaScript. -->
-                  <!--web-app that creates an online catalog for a small local library, where users can browse available books and manage their accounts.-->
-                <!--</p>
+                  Pacman a web-app game base on JavaScript.
+                  <!-- web-app that creates an online catalog for a small local library, where users can browse available books and manage their accounts.-->
+                </p>
               </div>
               <div class="card-reveal">
                 <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
@@ -462,56 +462,56 @@ such as login/sign up, view a product, add a product to cart, checkout the order
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit " href="https://django-local-lib.herokuapp.com" target="_blank" data-position="top"
+                  <a aria-label="Visit " href="#" target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/django-local-library"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/rujal404/tetris-js"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
-          </div>-->
+          </div>
 
           <!-- Flask Project -->
-          <!--<div class="col s12 m6 l4">
+          <!-- <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Screenshot of web page" src="/assets/img/project-blog-logo.jpg"
                 style="height: 100%; width: 100%" class="activator" />
               </div>
-              <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Prestigio Foods<i
-                    class="mdi-navigation-more-vert right"></i></span>
-                <p>
+              <div class="card-content"> -->
+               <!-- <span class="card-title activator teal-text hoverline">Prestigio Foods<i
+                    class="mdi-navigation-more-vert right"></i></span> -->
+                <!-- <p>
                   A simple and responsive website based on....
                 </p>
               </div>
-              <div class="card-reveal">-->
+              <div class="card-reveal"> -->
                 <!-- TODO: change this -- only close button -->
-               <!--<span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>-->
-                <!--<span class="card-title teal-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>-->
-                <!--<ul>
+               <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <!--<span class="card-title teal-text"><small>Accomplishments</small>
+                  <i class="mdi-navigation-close right"></i></span>-->
+                <!-- <ul>
                   <li><b>Tools:</b> HTML, CSS, Bootstrap, JavaScrippt</li>
                   <li>Users can view posts and contact the admin via Contact Page.</li>
                   <li>Admin can Add, Delete, Update posts.</li>
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit Blog website" href="https://flask-heroku-blog.herokuapp.com/" target="_blank" data-position="top"
+                  <a aria-label="Visit Blog website" href="https://rujaltamrakar.com.np" target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/flask-blog"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/rujal404"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
-          </div>-->
+          </div> -->
           <!-- ************* -->
        </div>
       </div>
