--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Us
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Varad's resume in a new tab" href="https://github.com/rujal404/portfolio-website/blob/master/CV.pdf" target="_blank"
+        <a aria-label="Open Varad's resume in a new tab" href="https://drive.google.com/file/d/1asmGrF-W52FxNDhO85xb2uOX1urmyPjB/view?usp=sharing" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -227,7 +227,7 @@ Us
       </li>
       <li class="bold">
         <a aria-label="Open Varad's Resume in a new tab"
-          href="https://github.com/rujal404/portfolio-website/blob/master/CV.pdf" target="_blank"
+          href="https://drive.google.com/file/d/1asmGrF-W52FxNDhO85xb2uOX1urmyPjB/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
