--- a/index.html
+++ b/index.html
@@ -335,9 +335,10 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             <!--<li>Added a bulk upload feature which reduced the manual work of adding products into a database.</li>-->
             <!--<li>Improved the response time by 20% by refactoring the codebase and changing database design and queries.</li>-->
             <li>
-              Worked on Nine different web application targeting customers, selling vendors, and admin user; design and build six different responsive web applications.
+              Worked on Nine different web application targeting customers, selling vendors, and admin user; design and build responsive web applications.
             </li>
-            <li>Add and updated content in web applications.</li>
+            <li>Add and updated content in web applications through CMS.</li>
+            <li>SEO (Search Engine Optimization).</li>
             <li>
               <b>Tools:</b> HTML, CSS, JavaScript, Bootstrap
             </li>
