--- a/index.html
+++ b/index.html
@@ -83,28 +83,28 @@
     //   alert("Inspect Elements Not Allowed");
     //   event.preventDefault();
     // })
-    document.addEventListener('contextmenu',(e)=>{
-    e.preventDefault();
-  }
-  );
-  document.onkeydown = function(e) {
-  if(event.keyCode == 123) {
-     return false;
-  }
-  if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
-     return false;
-  }
-  if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
-     return false;
-  }
-  if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
-     return false;
-  }
-  if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
-     return false;
-  }
-}
-Us
+//     document.addEventListener('contextmenu',(e)=>{
+//     e.preventDefault();
+//   }
+//   );
+//   document.onkeydown = function(e) {
+//   if(event.keyCode == 123) {
+//      return false;
+//   }
+//   if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+//      return false;
+//   }
+//   if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+//      return false;
+//   }
+//   if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+//      return false;
+//   }
+//   if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+//      return false;
+//   }
+// }
+// Us
    </script>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PGZH8HT"
@@ -312,7 +312,7 @@ Us
         <div class="card-content">
           <div class="row">
             <div class="col s12 m2">
-              <a href="https://longtail.info" target="_blank"><img alt="Zhiffy logo"
+              <a href="https://longtail.info" target="_blank"><img alt="Longtail logo"
                   src="/img/longtail.jpg" class="responsive-img center-block" /></a>
             </div>
             <!-- <div class="col s12 m10"> -->
@@ -354,13 +354,13 @@ such as login/sign up, view a product, add a product to cart, checkout the order
         <div class="card-content">
           <div class="row">
             <div class="col s12 m2">
-              <a href="https://www.meditab.com" target="_blank"><img alt="Meditab logo"
+              <a href="#" target="_blank"><img alt="FliteTec logo"
                   src="/img/FliteTec_logo.png" class="responsive-img center-block" /></a>
             </div>
             <!-- <div class="col s12 m10"> -->
             <div class="col s12 m10">
               <p>
-                <span class="card-title"><a href="http://meditab.com" target="_blank"
+                <span class="card-title"><a href="#" target="_blank"
                     class="teal-text hoverline">Flite Tec</a></span>
               </p>
             </div>
@@ -392,14 +392,14 @@ such as login/sign up, view a product, add a product to cart, checkout the order
         <div class="card-content">
           <div class="row">
             <div class="col s12 m2">
-              <img alt="Mtag logo" src="/img/sync_audio.png" class="responsive-img center-block" />
+              <img alt="SyncAudio logo" src="/img/sync_audio_1.png" class="responsive-img center-block" />
 
             </div>
 
             <!-- <div class="col s12 m10"> -->
             <div class="col s12 m10">
               <p>
-                <span class="card-title"><a href="#experience" class="teal-text hoverline">Sync Audio Studio</a></span>
+                <span class="card-title"><a href="#" class="teal-text hoverline">Sync Audio Studio</a></span>
               </p>
             </div>
           </div>
