--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
           </div>
 
           <!-- 3. BLE JAMMER -->
-          <div class="col s12 m6 l4">
+          <!-- <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="JavaScript web app" src="img/pacman.jpg" style="height: 100%; width: 100%;" class="activator" />
@@ -515,19 +515,19 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 <span class="card-title activator teal-text hoverline">BLUETOOTH Jammer Flasher 
                   <i class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  BLUETOOTH Jammer Flasher Web-App.
+                  BLUETOOTH Jammer Flasher Web-App. -->
                   <!-- web-app that creates an online catalog for a small local library, where users can browse available books and manage their accounts.-->
-                </p>
+                <!-- </p>
               </div>
               <div class="card-reveal">
                 <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> C++, HTML, CSS, JavaScript</li>
+                  <li><b>Tools:</b> C++, HTML, CSS, JavaScript</li> -->
                   <!-- <li>Users can view list and detail information for books and authors.</li>
                   <li>Admin users can create and manage models.</li>
                   <li>Librarians can renew reserved books.</li> -->
 
-                </ul>
+                <!-- </ul>
                 <div class="card-action">
                   <a aria-label="Visit " href="https://flash.rujaltamrakar.com.np/flash1.html" target="_blank" data-position="top"
                     data-tooltip="View Online"
@@ -540,7 +540,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Flask Project -->
           <!-- <div class="col s12 m6 l4">
