--- a/doc.html
+++ b/doc.html
@@ -296,7 +296,7 @@ Us
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/rujal404/tertis-js"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/rujal404"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
