--- a/index.html
+++ b/index.html
@@ -722,12 +722,12 @@ such as login/sign up, view a product, add a product to cart, checkout the order
               <p>
                 <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
                   class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-                    aria-label="Call Varad">+977 9860906702</a></a>
+                    aria-label="Call Varad" href="+977 9860906702">+977 9860906702</a></a>
               </p>
               <p>
                 <a aria-label="Email Varad" href="mailto:rujal404@gmail.com" target="_blank" data-position="top"
                   data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                    class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
+                    class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:rujal404@gmail.com"
                     class="hoverline">rujal404@gmail.com</a></a>
               </p>
               <p>
