--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@ button[type="submit"]:hover {
               <script>
                 document.write(new Date().getFullYear());
               </script>
-              <strong><span class="copyright-rujal"> Rujal</span></strong>
+              <strong><span class="copyright-rujal"><a href="https://github.com/rujal404" target="_blank"></a> Rujal</span></strong>
               . | All Rights Reserved |
             </div>
             <div class="credits">
