--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
     gtag('config', 'UA-126939217-2');
   </script>
+
+  <!-- G-ads -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2226038804886747"
+  crossorigin="anonymous"></script>
   
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
