--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <!-- G-ads -->
-<!--   <meta name="google-adsense-account" content="ca-pub-2226038804886747"> -->
 
   <!-- Google Tag Manager -->
   <script>
@@ -40,10 +38,7 @@
     gtag('config', 'UA-126939217-2');
   </script>
 
-  <!-- G-ads -->
-<!--   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2226038804886747"
-  crossorigin="anonymous"></script>
-   -->
+
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
@@ -348,15 +343,16 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             <li>
               Worked on Nine different web application targeting customers, selling vendors, and admin user; design and build responsive web applications.
             </li>
-            <li>Add and updated content in web applications through CMS.</li>
+            <li>Content Management System(CMS).</li>
             <li>SEO (Search Engine Optimization).</li>
+            <li>Photoshop</li>
             <li>
               <b>Tools:</b> HTML, CSS, JavaScript, Bootstrap
             </li>
           </ul>
         </div>
         <div class="card-action">
-          <span>March 2024 - June 2024 | Pulchowk, Lalitpur</span>
+          <span>Feb 2024 - June 2024 | Pulchowk, Lalitpur</span>
         </div>
       </div> 
 
@@ -553,29 +549,29 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             </div>
           </div> -->
 
-          <!-- Flask Project -->
-          <!-- <div class="col s12 m6 l4">
+          <!-- Blog Website Project -->
+          <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of web page" src="/assets/img/project-blog-logo.jpg"
+                <img alt="Screenshot of web page" src="img/thumbnail.jpg"
                 style="height: 100%; width: 100%" class="activator" />
               </div>
-              <div class="card-content"> -->
-               <!-- <span class="card-title activator teal-text hoverline">Prestigio Foods<i
-                    class="mdi-navigation-more-vert right"></i></span> -->
-                <!-- <p>
-                  A simple and responsive website based on....
+              <div class="card-content">
+               <span class="card-title activator teal-text hoverline">Blog<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  A simple and responsive Blog Website
                 </p>
               </div>
-              <div class="card-reveal"> -->
+              <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
-               <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <!--<span class="card-title teal-text"><small>Accomplishments</small>
-                  <i class="mdi-navigation-close right"></i></span>-->
-                <!-- <ul>
-                  <li><b>Tools:</b> HTML, CSS, Bootstrap, JavaScrippt</li>
-                  <li>Users can view posts and contact the admin via Contact Page.</li>
-                  <li>Admin can Add, Delete, Update posts.</li>
+               <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
+                <span class="card-title teal-text"><small>Accomplishments</small>
+                  <i class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tools:</b> HTML, CSS, Bootstrap, JavaScrippt, PHP</li>
+                  <li>Users can view posts, edit postand add posts.</li>
+                  <li>Admin can Add, Delete, Update users and posts.</li>
                 </ul>
                 <div class="card-action">
                   <a aria-label="Visit Blog website" href="https://rujaltamrakar.com.np" target="_blank" data-position="top"
@@ -589,7 +585,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
           <!-- ************* -->
        </div>
       </div>
