--- a/index.html
+++ b/index.html
@@ -89,28 +89,28 @@
     //   alert("Inspect Elements Not Allowed");
     //   event.preventDefault();
     // })
-    document.addEventListener('contextmenu',(e)=>{
-    e.preventDefault();
-  }
-  );
-  document.onkeydown = function(e) {
-  if(event.keyCode == 123) {
-     return false;
-  }
-  if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
-     return false;
-  }
-  if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
-     return false;
-  }
-  if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
-     return false;
-  }
-  if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
-     return false;
-  }
-}
-Us
+//     document.addEventListener('contextmenu',(e)=>{
+//     e.preventDefault();
+//   }
+//   );
+//   document.onkeydown = function(e) {
+//   if(event.keyCode == 123) {
+//      return false;
+//   }
+//   if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+//      return false;
+//   }
+//   if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+//      return false;
+//   }
+//   if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+//      return false;
+//   }
+//   if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+//      return false;
+//   }
+// }
+// Us
    </script>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PGZH8HT"
@@ -441,13 +441,13 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             <div class="col s12 m6 l4">
               <div class="card medium">
                 <div class="card-image waves-effect waves-block waves-light">
-                  <img alt="tertis web app" src="img/tetris.jpg" style="height: 100%; width: 100%" class="activator" />
+                  <img alt="tertis web app" src="img/himalaya.png" style="height: 100%; width: 100%" class="activator" />
                 </div>
                 <div class="card-content">
-                  <span class="card-title activator teal-text hoverline">Tetris Web-App<i
+                  <span class="card-title activator teal-text hoverline">Hotel Himalaya<i
                       class="mdi-navigation-more-vert right"></i></span>
                   <p>
-                    Tetris a block game web app based on JavaScript
+                    Hotel Himalaya e-commerce website based on html, css, bootstrap and javascript
                   </p>
                 </div>
                 <div class="card-reveal">
@@ -457,8 +457,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                     class="mdi-navigation-close right"></i></span>-->
                 <ul>
                   <li><b>Tools:</b> HTML, CSS, JavaScript</li>
-                  <li>Move the block with up, down, left and right arrow keys.</li>
-                  <li>Play tetris and see the leaderboard</li>
+                  <li><b>Project Outcome: </b>The redesigned website increased website visitors by 80%, boosted user engagement by 30%, and led to a 20% increase in bookings within the first month.</li>
 
                 </ul>
                 <div class="card-action">
@@ -567,7 +566,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 <!-- TODO: change this -- only close button -->
                <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
                 <span class="card-title teal-text"><small>Accomplishments</small>
-                  <i class="mdi-navigation-close right"></i></span>
+                  <!-- <i class="mdi-navigation-close right"></i> --></span>
                 <ul>
                   <li><b>Tools:</b> HTML, CSS, Bootstrap, JavaScrippt, PHP</li>
                   <li>Users can view posts, edit postand add posts.</li>
