--- a/index.html
+++ b/index.html
@@ -85,32 +85,32 @@
 <body>
   <!-- Inspect disable -->
    <script>
-    // document.addEventListener("contextmenu", function(event){
-    //   alert("Inspect Elements Not Allowed");
-    //   event.preventDefault();
-    // })
-//     document.addEventListener('contextmenu',(e)=>{
-//     e.preventDefault();
-//   }
-//   );
-//   document.onkeydown = function(e) {
-//   if(event.keyCode == 123) {
-//      return false;
-//   }
-//   if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
-//      return false;
-//   }
-//   if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
-//      return false;
-//   }
-//   if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
-//      return false;
-//   }
-//   if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
-//      return false;
-//   }
-// }
-// Us
+    document.addEventListener("contextmenu", function(event){
+      alert("Inspect Elements Not Allowed");
+      event.preventDefault();
+    })
+    document.addEventListener('contextmenu',(e)=>{
+    e.preventDefault();
+  }
+  );
+  document.onkeydown = function(e) {
+  if(event.keyCode == 123) {
+     return false;
+  }
+  if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+     return false;
+  }
+  if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+     return false;
+  }
+  if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+     return false;
+  }
+  if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+     return false;
+  }
+}
+Us
    </script>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PGZH8HT"
@@ -457,7 +457,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                     class="mdi-navigation-close right"></i></span>-->
                 <ul>
                   <li><b>Tools:</b> HTML, CSS, JavaScript</li>
-                  <li><b>Project Outcome: </b>The redesigned website increased website visitors by 80%, boosted user engagement by 30%, and led to a 20% increase in bookings within the first month.</li>
+                  <li><b>Project Outcome:</b>The redesigned website increased website visitors by 80%, boosted user engagement by 30%, and led to a 20% increase in bookings within the first month.</li>
 
                 </ul>
                 <div class="card-action">
