--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/rujal404/tertis-js"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/rujal404/"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
