--- a/index.html
+++ b/index.html
@@ -318,6 +318,51 @@ Us
         <div class="card-content">
           <div class="row">
             <div class="col s12 m2">
+              <!-- <a href="https://longtail.info" target="_blank"><img alt="Longtail logo"
+                  src="/img/longtail.jpg" class="responsive-img center-block" /></a> -->
+            </div>
+            <!-- <div class="col s12 m10"> -->
+             <div class="col s12 m10">
+              <p>
+                <span class="card-title"><a href="https://longtail.info" target="_blank"
+                    class="teal-text hoverline">Freelance</a></span>
+              </p>
+            </div>
+          </div>
+          <div class="role brown-text text-darken-2">Web Content Management</div>
+          <ul>
+            <li>
+              Designin inner page layout of an e-commerce platform using HTML, CSS, JavaScript.
+            </li>
+            <!--<li>
+              Worked on three web applications targeting customers, selling vendors, and admin users; built 50+ RESTful APIs with functionalities
+such as login/sign up, view a product, add a product to cart, checkout the order, etc.
+            </li>-->
+            <!--<li>Added a bulk upload feature which reduced the manual work of adding products into a database.</li>-->
+            <!--<li>Improved the response time by 20% by refactoring the codebase and changing database design and queries.</li>-->
+            <!-- <li>
+              Worked on Nine different web application targeting customers, selling vendors, and admin user; design and build responsive web applications.
+            </li> -->
+            <li>Content Management System(CMS).</li>
+            <li>Web content creation</li>
+            <li>SEO (Search Engine Optimization).</li>
+            <li>Photoshop</li>
+            <li>
+              <b>Tools:</b> HTML, CSS, JavaScript, Bootstrap, React
+            </li>
+          </ul>
+        </div>
+        <div class="card-action">
+          <span>July 2024 - December 2024</span>
+        </div>
+      </div> 
+
+
+
+    <div class="card">
+        <div class="card-content">
+          <div class="row">
+            <div class="col s12 m2">
               <a href="https://longtail.info" target="_blank"><img alt="Longtail logo"
                   src="/img/longtail.jpg" class="responsive-img center-block" /></a>
             </div>
@@ -344,6 +389,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
               Worked on Nine different web application targeting customers, selling vendors, and admin user; design and build responsive web applications.
             </li>
             <li>Content Management System(CMS).</li>
+            <li>Web content creation</li>
             <li>SEO (Search Engine Optimization).</li>
             <li>Photoshop</li>
             <li>
@@ -385,12 +431,12 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             </li>
             <li>Drone videography and photography.</li>
             <li>
-              <b>Tools:</b> STM32Programmer, FPV drone, Gopro or any small camera
+              <b>Tools:</b> STM32Programmer, Betaflight Configurator, FPV drone, Gopro or any small camera
             </li>
           </ul>
         </div>
         <div class="card-action">
-          <span>March 2021 - July 2023 | Tangal-12, Lalitpur</span>
+          <span>March 2021 - July 2023 | Tangal, Lalitpur-12</span>
         </div>
       </div>
 
@@ -425,7 +471,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
           </ul>
         </div>
         <div class="card-action">
-          <span>July 2020 - Nov 2022 | Tangal-12, Lalitpur</span>
+          <span>July 2020 - Nov 2022</span>
         </div>
       </div>
     </div>
