--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ Us
           <div class="role brown-text text-darken-2">Web Content Management</div>
           <ul>
             <li>
-              Designin inner page layout of an e-commerce platform using HTML, CSS, JavaScript.
+              Designing inner page layout of an e-commerce platform using HTML, CSS, JavaScript.
             </li>
             <!--<li>
               Worked on three web applications targeting customers, selling vendors, and admin users; built 50+ RESTful APIs with functionalities
